--- a/lesson6/catalog.html
+++ b/lesson6/catalog.html
@@ -221,7 +221,7 @@
 						<h2>$52.00</h2>
 					</div>
 				</div>
-				<div class="product">
+				<div class="product product3_hidden">
 					<div class="product3">
 						<div class="shadowProduct hiddenshadowProduct">
 							<div class="btnProduct">
