--- a/lesson6/product.html
+++ b/lesson6/product.html
@@ -180,7 +180,7 @@
 					<h2>$52.00</h2>
 				</div>
 			</div>
-			<div class="product">
+			<div class="product product6_hidden">
 				<div class="product6">
 					<div class="shadowProduct hiddenshadowProduct">
 						<div class="btnProduct">
