--- a/lesson6/cart.html
+++ b/lesson6/cart.html
@@ -128,8 +128,8 @@
 					</div>
 					<div class="productsCart__part2">
 						<div class="productsCart__shipping">
+							<h2 class="productsCart__shipping_h2">SHIPPING ADRESS</h2>
 							<form class="productsCart__form">
-								<h2>SHIPPING ADRESS</h2>
 								<input type="text" placeholder="Bangladesh" />
 								<input type="text" placeholder="State" />
 								<input type="text" placeholder="Postcode / Zip" />
