--- a/lesson6/registration.html
+++ b/lesson6/registration.html
@@ -69,6 +69,9 @@
 							<div class="registration__gender">
 								<label class="registration__label"><input type="radio" name="gender" value="Male" />Male</label>
 								<label class="registration__label"><input type="radio" name="gender" value="Female" />Female</label>
+								<label class="registration__label registration__label_hidden"
+									><input type="radio" name="gender" value="Other" />Other</label
+								>
 							</div>
 							<h2 class="registration__name">Login details</h2>
 							<input class="registration__input" type="email" placeholder="Email" />
@@ -136,7 +139,7 @@
 								</svg>
 								$10 off a purchase on your birthday
 							</p>
-							<p class="registration__offer">
+							<p class="registration__offer registration__offer_margin">
 								<svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path
 										d="M19.8035 0H18.0904C17.8502 0 17.6222 0.111827 17.4752 0.303176L7.3702 13.2826L2.52481 7.05754C2.45151 6.96318 2.35808 6.88688 2.25153 6.83438C2.14499 6.78187 2.0281 6.75451 1.90963 6.75437H0.196467C0.032258 6.75437 -0.0584248 6.94572 0.0420614 7.07494L6.75503 15.6981C7.06874 16.1006 7.67166 16.1006 7.98782 15.6981L19.9579 0.318087C20.0584 0.191349 19.9677 0 19.8035 0Z"
@@ -145,7 +148,7 @@
 								</svg>
 								Early access to products
 							</p>
-							<p class="registration__offer">
+							<p class="registration__offer registration__offer_margin">
 								<svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path
 										d="M19.8035 0H18.0904C17.8502 0 17.6222 0.111827 17.4752 0.303176L7.3702 13.2826L2.52481 7.05754C2.45151 6.96318 2.35808 6.88688 2.25153 6.83438C2.14499 6.78187 2.0281 6.75451 1.90963 6.75437H0.196467C0.032258 6.75437 -0.0584248 6.94572 0.0420614 7.07494L6.75503 15.6981C7.06874 16.1006 7.67166 16.1006 7.98782 15.6981L19.9579 0.318087C20.0584 0.191349 19.9677 0 19.8035 0Z"
