--- a/lesson6/catalog.html
+++ b/lesson6/catalog.html
@@ -103,7 +103,7 @@
 				<div class="filter__detail">
 					<details class="filter__main">
 						<summary class="filter__summary">
-							FILTER
+							<span class="filter__span filter__span_color">FILTER</span>
 							<svg
 								class="filter__summary_svg"
 								width="15"
