--- a/lesson6/product.html
+++ b/lesson6/product.html
@@ -94,8 +94,8 @@
 			<h2>MOSCHINO CHEAP AND CHIC</h2>
 			<p>
 				Compellingly actualize fully researched processes before proactive outsourcing. Progressively syndicate
-				collaborative architectures before cutting-edge services. Completely visualize parallel core competencies rather
-				than exceptional portals.
+				collaborative architectures before <span style="white-space: nowrap">cutting-edge</span> services. Completely
+				visualize parallel core competencies rather than exceptional portals.
 			</p>
 			<h3>$561</h3>
 			<span class="bannerinfoProduct__overlay__line"></span>
@@ -163,7 +163,7 @@
 					<h2>$52.00</h2>
 				</div>
 			</div>
-			<div class="product">
+			<div class="product product3_hidden">
 				<div class="product3">
 					<div class="shadowProduct hiddenshadowProduct">
 						<div class="btnProduct">
