--- a/lesson6/registration.html
+++ b/lesson6/registration.html
@@ -26,8 +26,8 @@
 				</nav>
 			</header>
 			<main>
-				<section class="bannerinfoCart container">
-					<div class="bannerinfoCart__message">
+				<section class="bannerinfoCart bannerinfoCart__rega container">
+					<div class="bannerinfoCart__message bannerinfoCart__rega_h2">
 						<h2>REGISTRATION</h2>
 					</div>
 					<div class="menu hidemenu">
