--- a/lesson6/product.html
+++ b/lesson6/product.html
@@ -163,7 +163,7 @@
 					<h2>$52.00</h2>
 				</div>
 			</div>
-			<div class="product product3_hidden">
+			<div class="product product3p_hidden">
 				<div class="product3">
 					<div class="shadowProduct hiddenshadowProduct">
 						<div class="btnProduct">
