--- a/lesson6/catalog.html
+++ b/lesson6/catalog.html
@@ -100,6 +100,7 @@
 				</section>
 			</main>
 			<section class="filter container">
+				<h2 style="display: none">Filters</h2>
 				<div class="filter__detail">
 					<details class="filter__main">
 						<summary class="filter__summary">
