--- a/lesson6/product.html
+++ b/lesson6/product.html
@@ -65,6 +65,7 @@
 				</section>
 			</main>
 			<section class="bannerinfoProduct">
+				<h2 style="display: none">Banner</h2>
 				<div class="bannerinfoProduct__background"></div>
 				<div class="bannerinfoProduct__background-left">
 					<svg width="47" height="47" viewBox="0 0 47 47" fill="none" xmlns="http://www.w3.org/2000/svg">
